upadted package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cineflare",
   "private": true,
-  "homepage": "https://deepusasi123.github.io/CineFlare/",
+  "homepage": ".",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
